--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,5 +1,6 @@
-<%- include("./includes/header") %>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+  <%- include("./includes/header") %>
   <body>
     <%- include("./includes/navigation") %>
     <main>
