--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -1,11 +1,12 @@
-<%- include("./includes/header") %>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+  <%- include("./includes/header") %>
   <body>
     <%- include("./includes/navigation") %>
     <main>
       <form action="/product" method="post">
-        <label for="product_name">Product Name</label>
-        <input type="text" name="product" id="product_name" />
+        <label for="title">Product Name</label>
+        <input type="text" name="title" id="product_name" />
         <button type="submit">Add Product</button>
       </form>
     </main>
