--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -5,8 +5,18 @@
     <%- include("./includes/navigation") %>
     <main>
       <form action="/product" method="post">
-        <label for="title">Product Name</label>
-        <input type="text" name="title" id="product_name" />
+        <div class="form-control">
+          <label for="title">Product Name</label>
+          <input type="text" name="title" id="product_name" />
+        </div>
+        <div class="form-control">
+          <label for="imgurl">Product Image</label>
+          <input type="text" name="imgurl" id="product_img" />
+        </div>
+        <div class="form-control">
+          <label for="proce">Product Price</label>
+          <input type="number" step="0.01" name="price" id="product_name" />
+        </div>
         <button type="submit">Add Product</button>
       </form>
     </main>
