--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -4,18 +4,37 @@
   <body>
     <%- include("./includes/navigation") %>
     <main>
-      <form action="/product" method="post">
+      <form
+        action="<%= isEdit ? '/product/' + product.id : '/product' %>"
+        method="POST"
+      >
         <div class="form-control">
           <label for="title">Product Name</label>
-          <input type="text" name="title" id="product_name" />
+          <input
+            type="text"
+            name="title"
+            id="product_name"
+            value="<%= isEdit ? product.title : '' %>"
+          />
         </div>
         <div class="form-control">
-          <label for="imgurl">Product Image</label>
-          <input type="text" name="imgurl" id="product_img" />
+          <label for="imgURL">Product Image</label>
+          <input
+            type="text"
+            name="imgURL"
+            id="product_img"
+            value="<%= isEdit ? product.imgURL : '' %>"
+          />
         </div>
         <div class="form-control">
-          <label for="proce">Product Price</label>
-          <input type="number" step="0.01" name="price" id="product_name" />
+          <label for="price">Product Price</label>
+          <input
+            type="number"
+            step="0.01"
+            name="price"
+            id="product_name"
+            value="<%= isEdit ? product.price : '' %>"
+          />
         </div>
         <button type="submit">Add Product</button>
       </form>
